--- a/hw/bd/mm_design/ui/bd_79e1975d.ui
+++ b/hw/bd/mm_design/ui/bd_79e1975d.ui
@@ -3,7 +3,7 @@
    "Default View_ScaleFactor":"1.0",
    "Default View_TopLeft":"-41,-12",
    "ExpandedHierarchyInLayout":"",
-   "guistr":"# # String gsaved with Nlview 7.0.21  2019-05-29 bk=1.5064 VDI=41 GEI=36 GUI=JA:9.0 non-TLS
+   "guistr":"# # String gsaved with Nlview 7.0.21  2019-05-29 bk=1.5064 VDI=41 GEI=36 GUI=JA:9.0 non-TLS-threadsafe
 #  -string -flagsOSRD
 preplace port DDR -pg 1 -lvl 4 -x 1030 -y 260 -defaultsOSRD
 preplace port FIXED_IO -pg 1 -lvl 4 -x 1030 -y 280 -defaultsOSRD
@@ -14,10 +14,10 @@ preplace inst myVMX -pg 1 -lvl 3 -x 900 -y 140 -defaultsOSRD
 preplace netloc processing_system7_0_FCLK_CLK0 1 0 3 20 10 470 250 780J
 preplace netloc processing_system7_0_FCLK_RESET0_N 1 0 2 30 20 450
 preplace netloc rst_ps7_0_100M_peripheral_aresetn 1 1 2 460 240 790
-preplace netloc processing_system7_0_DDR 1 1 3 NJ 260 NJ 260 NJ
-preplace netloc processing_system7_0_FIXED_IO 1 1 3 NJ 280 NJ 280 NJ
 preplace netloc ps7_0_axi_periph_M00_AXI 1 2 1 N 120
 preplace netloc processing_system7_0_M_AXI_GP0 1 1 1 480 60n
+preplace netloc processing_system7_0_FIXED_IO 1 1 3 NJ 280 NJ 280 NJ
+preplace netloc processing_system7_0_DDR 1 1 3 NJ 260 NJ 260 NJ
 levelinfo -pg 1 0 240 630 900 1030
 pagesize -pg 1 -db -bbox -sgen 0 0 1150 480
 "
